add description, ingredients and steps to all recipes pages

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -8,6 +8,35 @@
 
     <body>
         <h1>Chicken Curry</h1>
+
+        <div>
+            <img src="https://hips.hearstapps.com/del.h-cdn.co/assets/17/31/1501791674-delish-chicken-curry-horizontal.jpg?crop=0.665xw:0.998xh;0.139xw,0.00240xh&resize=200:*" alt="Bowl of chicken curry and rice">
+        </div>
+        
+
+        <h2>Description</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis incidunt accusantium pariatur dignissimos earum, quos perspiciatis quas vitae blanditiis doloremque nihil saepe deserunt autem ratione inventore eum esse aliquid cupiditate.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, voluptas voluptate perspiciatis eaque quia suscipit eum accusantium recusandae eos nostrum dolore adipisci quas, a commodi natus illo, accusamus molestias? Excepturi.</p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>Lorem</li>
+            <li>Ipsum </li>
+            <li>Dolor </li>
+            <li>Sit</li>
+            <li>Amet</li>
+        </ul>
+
+        <h2>Steps</h2>
+        
+        <ol>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo eaque, quasi inventore amet corporis tempora unde incidunt ipsam quas harum dolor assumenda, accusantium vero facere ad corrupti eos, cupiditate ullam!</li>
+            <br>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo neque eius quia quibusdam doloribus saepe temporibus nam dolore, sequi cupiditate molestiae quae vero dolorem, tempore dolorum. Saepe, blanditiis aliquid.</li>
+            <br>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nihil nemo veniam ipsa error aspernatur eum, ullam vel dolore, eius, voluptates totam maiores recusandae placeat quos aliquid? Distinctio, neque quisquam!</li>
+        </ol>
     </body>
 
 </html>
