--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <title> Odin Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
 
-        <ul>
+        <ul class="home-links">
             <li><a href="./recipes/chicken-curry.html">Chicken Curry</a></li>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/pizza.html">Pizza</a></li>
