--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chicken Curry - Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
